--- a/resume.html
+++ b/resume.html
@@ -62,83 +62,204 @@
 </head>
 <body>
 
-  <h1>Divyansh Rana</h1>
-  <div class="contact">
-    <a href="mailto:divyansh.rana12@gmail.com">divyansh.rana12@gmail.com</a> |
-    <a href="https://linkedin.com">LinkedIn</a> |
-    +91 8968121890 | Bengaluru, India
+<!-- <p><a href="Divyansh_Rana_Resume.pdf" download>Download PDF</a></p> -->
+<div class="header"></div>
+  <h1 style="text-align: center;">Divyansh Rana</h1>
+  <style>
+    @media print { .no-print { display: none !important; } }
+  </style>
+
+  <div class="contact no-print" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 12px;">
+    <a href="mailto:divyansh.rana12@gmail.com" class="contact-link" style="display: flex; align-items: center;">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/gmail.svg" alt="Gmail" width="16" height="16" style="vertical-align:middle; margin-right:4px; filter: invert(17%) sepia(97%) saturate(748%) hue-rotate(184deg) brightness(97%) contrast(92%);">
+      divyansh.rana12@gmail.com
+    </a>
+    <span class="divider">|</span>
+    <a href="https://linkedin.com" class="contact-link" target="_blank" style="display: flex; align-items: center;">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" width="16" height="16" style="vertical-align:middle; margin-right:4px; filter: invert(24%) sepia(94%) saturate(1877%) hue-rotate(187deg) brightness(92%) contrast(101%);">
+      LinkedIn
+    </a>
+    <span class="divider">|</span>
+    <span class="contact-info" style="display: flex; align-items: center;">
+      <img src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/svgs/solid/phone.svg" alt="Phone" width="16" height="16" style="vertical-align:middle; margin-right:4px; filter: invert(17%) sepia(97%) saturate(748%) hue-rotate(184deg) brightness(97%) contrast(92%);">
+      +91 8968121890
+    </span>
+    <span class="divider">|</span>
+    <span class="contact-info" style="display: flex; align-items: center;">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/googlemaps.svg" alt="Location" width="16" height="16" style="vertical-align:middle; margin-right:4px; filter: invert(17%) sepia(97%) saturate(748%) hue-rotate(184deg) brightness(97%) contrast(92%);">
+      Bengaluru, India
+    </span>
   </div>
 
-  <div class="section">
-    <h2>Experience</h2>
-    <p>Backend Engineer with 6+ years of experience in scalable distributed systems, cloud-native architectures, and high-performance microservices. Skilled in Java, Spring Boot, Quarkus, Kafka, AWS, Kubernetes, with expertise in OOP, large-scale system distribution, modernizing legacy systems, optimizing performance, and driving developer productivity. Passionate about system design, resilient APIs, and cloud infrastructure.</p>
+  <p style="margin-top:12px; text-align: center;">
+    <a href="Divyansh_Rana_Resume.pdf" download class="download-btn sticky-download no-print">
+      Download PDF
+    </a>
+  </p>
+  <style>
+  .sticky-download {
+    position: fixed;
+    top: 24px;
+    right: 32px;
+    z-index: 1000;
+    box-shadow: 0 4px 16px rgba(3,102,214,0.12);
+    background: linear-gradient(90deg, #003366 70%, #0366d6 100%);
+    color: #fff;
+    border: none;
+    border-radius: 24px;
+    padding: 10px 28px;
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    transition: background 0.2s, box-shadow 0.2s, transform 0.2s;
+  }
+  .sticky-download:hover {
+    background: linear-gradient(90deg, #0366d6 70%, #003366 100%);
+    box-shadow: 0 8px 24px rgba(3,102,214,0.18);
+    transform: translateY(-2px) scale(1.04);
+  }
+  @media (max-width: 600px) {
+    .sticky-download {
+      top: auto;
+      bottom: 18px;
+      right: 16px;
+      left: auto;
+      padding: 10px 18px;
+      font-size: 14px;
+    }
+  }
+  </style>
+</div>
+<style>
+.header {
+  text-align: center;
+  margin-bottom: 28px;
+  padding-bottom: 12px;
+  border-bottom: 2px solid #e0e7ef;
+}
+.header h1 {
+  font-size: 32px;
+  color: #003366;
+  margin-bottom: 6px;
+  letter-spacing: 1px;
+}
+.contact {
+  font-size: 15px;
+  color: #444;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  text-align: center;
+  margin: 0 auto;
+}
+.contact-link {
+  color: #0366d6;
+  font-weight: 500;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+.contact-link:hover {
+  color: #003366;
+  text-decoration: underline;
+}
+.contact-info {
+  color: #444;
+  font-weight: 400;
+}
+.divider {
+  color: #b0b8c1;
+  margin: 0 6px;
+  font-size: 16px;
+}
+.download-btn {
+  display: inline-block;
+  background: #003366;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 6px 18px;
+  border-radius: 22px;
+  text-decoration: none;
+  box-shadow: 0 2px 8px rgba(0,51,102,0.07);
+  transition: background 0.2s, box-shadow 0.2s;
+}
+.download-btn:hover {
+  background: #0366d6;
+  box-shadow: 0 4px 16px rgba(3,102,214,0.12);
+}
+</style>
 
-    <div class="job">
-      <div>
-        <span class="job-title">Software Engineer II</span> – Delta Airlines
-        <span class="job-date">Dec 2022 – Present | Bangalore, India</span>
-      </div>
-      <ul>
-        <li>Architected and developed a cloud-native vacation booking platform in Java, Quarkus, and Redis, reducing booking latency by 30% and supporting 10K+ concurrent users.</li>
-        <li>Implemented SAGA pattern for distributed transactions across microservices, improving consistency and fault tolerance.</li>
-        <li>Built a vacation builder with reactive programming, serving APIs to thousands of travel agents using scalable design patterns.</li>
-        <li>Automated CI/CD pipelines in GitLab with linting, test coverage, Veracode scanning, and secure deployments.</li>
-        <li>Modernized 10+ legacy monolith applications into microservices with SSO and modular UI flows (NX monorepo).</li>
-        <li>Enhanced reliability with AWS CloudWatch monitoring and automated alerts.</li>
-      </ul>
+
+<div class="section">
+  <h2>Experience</h2>
+  <p>Backend Engineer with 6+ years of experience in scalable distributed systems, cloud-native architectures, and high-performance microservices. Skilled in Java, Spring Boot, Quarkus, Kafka, AWS, Kubernetes, with expertise in OOP, large-scale system distribution, modernizing legacy systems, optimizing performance, and driving developer productivity. Passionate about system design, resilient APIs, and cloud infrastructure.</p>
+
+  <div class="job">
+    <div>
+      <span class="job-title">Software Engineer II</span> – Delta Airlines
+      <span class="job-date">Dec 2022 – Present | Bangalore, India</span>
     </div>
-
-    <div class="job">
-      <div>
-        <span class="job-title">Software Engineer II</span> – Scienaptic AI
-        <span class="job-date">Oct 2020 – Dec 2022 | Bangalore, India</span>
-      </div>
-      <ul>
-        <li>Developed an automated credit decisioning platform with end-to-end underwriting workflows.</li>
-        <li>Built a real-time forecasting and what-if analysis tool using Angular, Spring Boot, Kafka, and JUnit, following TDD.</li>
-        <li>Designed webhook-based (Java + NoSQL) for mobile-first apps.</li>
-        <li>Introduced PR best practices: code quality, design patterns, and documentation.</li>
-        <li>Led execution of a pricing guidance system automating sales strategy reports and documentation.</li>
-        <li>Delivered interactive dashboards (AureliaJS + Plotly) with client-side caching for real-time insights.</li>
-      </ul>
-    </div>
-
-    <div class="job">
-      <div>
-        <span class="job-title">Systems Engineer</span> – Infosys
-        <span class="job-date">Aug 2019 – Oct 2020 | Pune, India</span>
-      </div>
-      <ul>
-        <li>Created an internal job portal with Angular + Spring Framework.</li>
-        <li>Delivered production-ready code in Agile/XP practices.</li>
-        <li>Contributed to infrastructure compliance and platform modernization.</li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="section">
-    <h2>Skills</h2>
-    <div class="skills-grid">
-      <div><b>Backend:</b> Java, Spring Boot, Quarkus, Kafka, Hibernate/JPA</div>
-      <div><b>Cloud & Infra:</b> AWS (Lambda, S3, Route53), Docker, Kubernetes, Redis</div>
-      <div><b>Frontend:</b> Angular, React, Next.js, TypeScript</div>
-      <div><b>DevOps/Tools:</b> GitLab CI/CD, AWS CloudWatch, Veracode, MySQL, MongoDB</div>
-    </div>
-  </div>
-
-  <div class="section">
-    <h2>Education</h2>
-    <p>B.E. in Computer Science Engineering | 2015 – 2019 | India<br>CGPA: 9 / 10</p>
-  </div>
-
-  <div class="section">
-    <h2>Projects</h2>
     <ul>
-      <li><b>GenAI Reddit Uploader:</b> Automated bot using Stable Diffusion XL for image generation + dynamic text; scheduled posting via GitHub Actions.</li>
-      <li><b>Photogram (Social Media App):</b> Built & deployed Spring Boot + React app with JWT auth & profile management; deployed on Heroku.</li>
-      <li><b>GraphLink (Scalable Backend Infra):</b> Architected event-driven microservices platform with service discovery, API gateway, Neo4J, Kafka, Docker, Kubernetes; automated via GitHub Actions.</li>
+      <li>Architected and developed a cloud-native vacation booking platform in Java, Quarkus, and Redis, reducing booking latency by 30% and supporting 10K+ concurrent users.</li>
+      <li>Implemented SAGA pattern for distributed transactions across microservices, improving consistency and fault tolerance.</li>
+      <li>Built a vacation builder with reactive programming, serving APIs to thousands of travel agents using scalable design patterns.</li>
+      <li>Automated CI/CD pipelines in GitLab with linting, test coverage, Veracode scanning, and secure deployments.</li>
+      <li>Modernized 10+ legacy monolith applications into microservices with SSO and modular UI flows (NX monorepo).</li>
+      <li>Enhanced reliability with AWS CloudWatch monitoring and automated alerts.</li>
     </ul>
   </div>
 
-</body>
+  <div class="job">
+    <div>
+      <span class="job-title">Software Engineer II</span> – Scienaptic AI
+      <span class="job-date">Oct 2020 – Dec 2022 | Bangalore, India</span>
+    </div>
+    <ul>
+      <li>Developed an automated credit decisioning platform with end-to-end underwriting workflows.</li>
+      <li>Built a real-time forecasting and what-if analysis tool using Angular, Spring Boot, Kafka, and JUnit, following TDD.</li>
+      <li>Designed webhook-based (Java + NoSQL) for mobile-first apps.</li>
+      <li>Introduced PR best practices: code quality, design patterns, and documentation.</li>
+      <li>Led execution of a pricing guidance system automating sales strategy reports and documentation.</li>
+      <li>Delivered interactive dashboards (AureliaJS + Plotly) with client-side caching for real-time insights.</li>
+    </ul>
+  </div>
+
+  <div class="job">
+    <div>
+      <span class="job-title">Systems Engineer</span> – Infosys
+      <span class="job-date">Aug 2019 – Oct 2020 | Pune, India</span>
+    </div>
+    <ul>
+      <li>Created an internal job portal with Angular + Spring Framework.</li>
+      <li>Delivered production-ready code in Agile/XP practices.</li>
+      <li>Contributed to infrastructure compliance and platform modernization.</li>
+    </ul>
+  </div>
+</div>
+
+<div class="section">
+  <h2>Skills</h2>
+  <div class="skills-grid">
+    <div><b>Backend:</b> Java, Spring Boot, Quarkus, Kafka, Hibernate/JPA</div>
+    <div><b>Cloud & Infra:</b> AWS (Lambda, S3, Route53), Docker, Kubernetes, Redis</div>
+    <div><b>Frontend:</b> Angular, React, Next.js, TypeScript</div>
+    <div><b>DevOps/Tools:</b> GitLab CI/CD, AWS CloudWatch, Veracode, MySQL, MongoDB</div>
+  </div>
+</div>
+
+<div class="section">
+  <h2>Education</h2>
+  <p>B.E. in Computer Science Engineering | 2015 – 2019 | India<br>CGPA: 9 / 10</p>
+</div>
+
+<div class="section">
+  <h2>Projects</h2>
+  <ul>
+    <li><b>GenAI Reddit Uploader:</b> Automated bot using Stable Diffusion XL for image generation + dynamic text; scheduled posting via GitHub Actions.</li>
+    <li><b>Photogram (Social Media App):</b> Built & deployed Spring Boot + React app with JWT auth & profile management; deployed on Heroku.</li>
+    <li><b>GraphLink (Scalable Backend Infra):</b> Architected event-driven microservices platform with service discovery, API gateway, Neo4J, Kafka, Docker, Kubernetes; automated via GitHub Actions.</li>
+  </ul>
+</div>
 </html>
