noprint btn fix

--- a/resume.html
+++ b/resume.html
@@ -220,7 +220,7 @@
       Bengaluru, India
     </span>
   </div>
-  <a href="Divyansh_Rana_Resume.pdf" download class="fab-download" aria-label="Download resume PDF">
+  <a href="Divyansh_Rana_Resume.pdf" download class="fab-download no-print" aria-label="Download resume PDF">
     <!-- flat icon -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor"
       class="fab-icon">
