--- a/resume.html
+++ b/resume.html
@@ -387,7 +387,7 @@
 
   <div class="section">
     <h2>Experience</h2>
-    <p style="border-bottom: 1px solid #e0e7ef; padding-bottom: 10px; margin-bottom: 16px;">
+    <p>
       Backend Engineer with 6+ years of experience in scalable distributed systems, cloud-native architectures, and
       high-performance microservices. Skilled in <b>Java, Spring Boot, Quarkus, Kafka, AWS, Kubernetes</b>, with
       expertise in
@@ -395,7 +395,7 @@
       productivity. Passionate about system design, resilient APIs, and cloud infrastructure.
     </p>
 
-    <div class="job" style="border-bottom: 1px solid #e0e7ef; padding-bottom: 10px; margin-bottom: 16px;">
+    <div class="job" style="border-top: 1px solid #e0e7ef; padding-top: 10px; margin-top: 16px;">
       <div>
         <span style="font-weight: bold;">Delta Airlines</span> –
         <span class="job-title">Software Engineer II</span>
@@ -425,7 +425,7 @@
       </ul>
     </div>
 
-    <div class="job" style="border-bottom: 1px solid #e0e7ef; padding-bottom: 10px; margin-bottom: 16px;">
+    <div class="job" style="border-top: 1px solid #e0e7ef; padding-top: 10px; margin-top: 16px;">
       <div>
         <span style="font-weight: bold;">Scienaptic AI</span> –
         <span class="job-title">Software Engineer II</span>
@@ -453,7 +453,7 @@
       </ul>
     </div>
 
-    <div class="job" style="border-bottom: 1px solid #e0e7ef; padding-bottom: 10px; margin-bottom: 16px;">
+    <div class="job" style="border-top: 1px solid #e0e7ef; padding-top: 10px; margin-top: 16px;">
       <div>
         <span style="font-weight: bold;">Infosys</span> –
         <span class="job-title">Systems Engineer</span>
