--- a/resume.html
+++ b/resume.html
@@ -270,7 +270,7 @@
       padding: 10px 14px;
 
       color: var(--fg);
-      background: linear-gradient(180deg, rgba(255, 255, 255, .75), rgba(255, 255, 255, .55));
+      /* background: linear-gradient(180deg, rgba(255, 255, 255, .75), rgba(255, 255, 255, .55)); */
       /* border: 1px solid var(--sep);
       border-radius: 14px; */
       /* box-shadow: 0 1px 2px rgba(0, 0, 0, .06); */
