--- a/resume.html
+++ b/resume.html
@@ -585,7 +585,7 @@
   </div>
 
   <div class="section">
-    <h2>Experience | 6+ years </h2>
+    <h2>Experience | 6+ years | Backend development | Designing and scaling distributed systems </h2>
     <!-- <p>
       Backend Engineer with 6+ years of experience in scalable distributed systems, cloud-native architectures, and
       high-performance microservices. Skilled in <b>Java, Spring Boot, Quarkus, Kafka, AWS, Kubernetes</b>, with
