--- a/resume.html
+++ b/resume.html
@@ -164,7 +164,7 @@
     .resume-title {
       text-align: center;
       font-size: 41px;
-      font-weight: 300;
+      font-weight: 300 !important;
       /* lighter for first name */
       font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
       margin: 0;
@@ -720,7 +720,7 @@
       CGPA: 8.2 / 10<br>
       Relevant Coursework: <b>OOPS (Object Oriented Programming)</b>, <b>Data Structures & Algorithms</b>, Operating
       Systems,
-      Database Management Systems, Computer Networks, Software Engineering, Cloud Computing, <b>Distributed Systems</b>,
+      Database Management Systems, Computer Networks, Software Engineering, Cloud Computing,
       <b>Software Design</b>
     </p>
   </div>
