name font change

--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Divyansh Rana - Resume</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -164,30 +166,17 @@
     .resume-title {
       text-align: center;
       font-size: 41px;
-      font-weight: 300 !important;
-      /* lighter for first name */
-      font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
+      font-weight: 300;
+      font-family: "Roboto", Arial, sans-serif;
       margin: 0;
       color: #222;
       letter-spacing: 1.5px;
-      /* increased spacing */
     }
 
     .resume-title span {
-      font-weight: 480;
-      /* bold for last name */
+      font-weight: 500;
       color: #111;
       letter-spacing: 2px;
-      /* slightly more spacing on surname */
-    }
-
-    /* Optional: headings slightly stronger */
-    h1,
-    h2,
-    h3 {
-      font-family: "Poppins", "Segoe UI", "Helvetica Neue", Arial, sans-serif;
-      color: #111;
-      letter-spacing: 1px;
     }
 
     */
