--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Divyansh Rana - Resume</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -163,21 +163,21 @@
       }
     }
 
-    .resume-title {
-      text-align: center;
-      font-size: 41px;
-      font-weight: 300;
-      font-family: "Roboto", Arial, sans-serif;
-      margin: 0;
-      color: #222;
-      letter-spacing: 1.5px;
-    }
-
-    .resume-title span {
-      font-weight: 500;
-      color: #111;
-      letter-spacing: 2px;
-    }
+  .resume-title {
+    text-align: center;
+    font-size: 41px;
+    font-weight: 300;
+    font-family: "Poppins", Arial, sans-serif;
+    margin: 0;
+    color: #222;
+    letter-spacing: 1.5px;
+  }
+  
+  .resume-title span {
+    font-weight: 500;
+    color: #111;
+    letter-spacing: 2px;
+  }
 
     */
   </style>
