--- a/resume.html
+++ b/resume.html
@@ -585,17 +585,19 @@
   <div class="section" style="text-align: left;">
     <h2 style=" margin-top: 0;">Skills</h2>
     <div class="skills-grid" style="margin-left: 3.8rem;">
-      <div><b>Languages:</b> Java, Javascript, Typescript, Python</div>
-      <div><b>Frameworks:</b> Spring Boot, Quarkus, Angular, React, NX, Hibernate/JPA</div>
-      <div><b>DevOps/Tools:</b> GitLab CI/CD, Veracode, MySQL, MongoDB, Kafka, Redis</div>
-      <div><b>Cloud & Infra:</b> AWS (EC2, Lambda, S3, Route53, SQS, SNS, EventBridge, Cloudwatch), Docker, Kubernetes
+      <div><b>Backend/Frameworks:</b> • Java • Spring Boot • Quarkus • Java EEE • Spring MVC • Hibernate • Application Servers • Servlet Containers  • JPA</div>
+      <div><b>Frontend:</b>Angular • React</div>
+      <div><b>Cloud/DevOps:</b>AWS (EC2, S3, Lambda, CloudWatch) • Kubernetes • Docker • GitLab CI/CD • Terraform • Helm • Grafana</div>
+      <div><b>Data Messaging:</b> Kafka 
+      <div><b>Databases:</b> PostgreSQL • MySQL • MongoDB • DynamoDB • Neo4j • Redis
       </div>
 
     </div>
   </div>
 
   <div class="section">
-    <h2>Experience | 6+ years | Backend Engineering • Distributed Systems • Cloud </h2>
+    <h2>Experience | 5+ years | Backend Engineering • Distributed Systems • Cloud | Deep expertise in Java 17, Spring
+Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
     <!-- <p>
       Backend Engineer with 6+ years of experience in scalable distributed systems, cloud-native architectures, and
       high-performance microservices. Skilled in <b>Java, Spring Boot, Quarkus, Kafka, AWS, Kubernetes</b>, with
@@ -618,29 +620,20 @@
           by identifying
           static pod deployments and enabling <b>autoscaling</b>, improving resource utilization for 20K–30K users and
           achieving an estimated annual cost saving of <b>$30,000–$40,000</b>.</li>
-        <li>Implemented <b>SAGA pattern</b> for distributed transactions across microservices, improving consistency and
-          fault tolerance.</li>
+        <li>Implemented SAGA-based distributed transactions with <b>Kafka</b> for fault-tolerant booking flows.</li>
         <li><b>Developed a real-time user activity detection service</b> from scratch, monitoring cross-tab
           interactions, syncing session states, and triggering configurable alerts (e.g., logout warnings), <b>enhancing
             engagement and security</b>.</li>
-        <li><b>Orchestrated a vacation builder using Java Quarkus with reactive programming</b>, enabling non-blocking,
-          high-throughput APIs that efficiently served thousands of travel agents with improved performance and
-          scalability.</li>
-        <li><b>Designed and spearheaded an NX framework proof-of-concept</b> that was leveraged to modernize
-          <b>10+ legacy monolith applications</b> into microservices with SSO and modular UI flows,
-          <b>reducing developer overhead</b> and <b>improving team efficiency</b>.
+        <li>Owned the microservices roadmap for the <b>Spring</b> based vacation-booking platform handling $4.8–9.6 million USD in weekly
+            bookings while maintaining <b>99.9% availability on AWS EKS</b>.</li>
+        <li>Modernised 11 legacy mainframe applications to Nx micro-frontends and <b>Quarkus containers</b>, cutting deployment cycles from
+        1-2 weeks to under 4 hours <b>(80-90% faster)</b> across an 8-member team.
         </li>
         <!-- <li><b>Created and published reusable internal libraries</b> (hosted in npm Nexus repo) widely adopted across
           the org, <b>reducing developer time</b> and <b>improving code consistency</b>.</li> -->
-        <li><b>Devised beta and stable release pipelines</b> with versioning, naming conventions, and CI/CD
-          integrations, enabling seamless reuse of internal libraries (authentication, logging) across teams.</li>
-        <li><b>Automated and maintained GitLab CI/CD pipelines</b> with linting, test coverage, Veracode scanning, and
-          secure deployments,
-          accelerating application delivery while improving code quality and security.</li>
-        <li><b>Fortified system reliability</b> with AWS CloudWatch monitoring by tracking service availability,
-          configuring automated alerts,
-          and building an aggregated dashboard for all microservices to enable proactive issue detection and faster
-          incident response.</li>
+        <li>Led caching and integration strategy that reduced <b>vacation-search latency by 93% (30 s ➜ 2 s) for 5,000-10,000 daily searches</b>.</li>
+        <li>Coached four junior engineers on design reviews and <b>CI/CD</b> hygiene, boosting <b>deployment success rate to 99%+</b>.</li>
+        <li><b>Instrumented services with <b>CloudWatch</b>, Grafana and automated alarms, <b>reducing mean-time-to-detect by 40%</b>.</li>
         <li class="job-skill">JAVA, AWS, EC2, S3, Route53, EventBridge, Cloudwatch, DynamoDB, IAMs, Redis,
           Quarkus, Springboot, Angular,
           NX, MongoDB, PostgreSQL, Docker</li>
@@ -654,39 +647,24 @@
         <span class="job-date">Oct 2020 – Dec 2022 | Bangalore, India</span>
       </div>
       <ul>
-        <li><b>Engineered an automated credit decisioning platform</b> with end-to-end underwriting workflows, enabling
-          <b>faster and more consistent loan approvals</b> for banking clients.
+        <li>Delivered an <b>automated credit-decisioning platform </b> used by 150+ banks/NBFCs, processing 3 million decisions and ~$2.84
+          billion USD in loan applications per month, increasing 1-hour decision share from <b>35% to 62%</b>.
         </li>
 
-        <li><b>Streamlined integration of 3rd-party vendor data</b> into the decision engine using webhook + cron
-          pipelines,
-          <b>boosting accuracy by 15%</b> for shared users.
+        <li><b>Integrated bureau and <b>alternative-data APIs</b>, improving credit-risk prediction accuracy by 15% through smarter data aggregation
+          and <b>real-time ingestion pipelines</b>.
         </li>
 
-        <li><b>Led execution of a pricing guidance system</b> leveraged by the marketing team to strategize
-          product pricing. Integrated external APIs and automated multi-dimensional (horizontal & vertical)
-          calculations,
-          <b>producing actionable reports that optimized competitor benchmarking and discount strategies</b>.
-        </li>
-        <li>
-          <b>Gained end-to-end understanding of the product</b> and <b>undertook the initiative to create
-            and maintain comprehensive technical documentation</b> for long-term scalability and knowledge sharing.
-        </li>
-        <li><b>Devised a real-time forecasting and what-if analysis tool</b> with <b>Test-Driven Development (TDD)</b>
-          for a banking client, empowering scenario simulations while safeguarding data through client-side deployment.
+        <li>Built a pricing-guidance API for a global hardware client, <b>enabling ~5% sales uplift via dynamic competitor benchmarking and
+           personalized price recommendations</b>.
         </li>
 
-        <li><b>Crafted interactive dashboards</b> (AureliaJS + Plotly) with client-side caching, delivering real-time
-          insights and
-          <b>reducing latency</b> for analytics.
+        <li>Developed a real-time forecasting dashboard using <b>Java (Spring Boot), MySQL, Kafka Streaming, Spark Streaming,</b> and Angular,
+          reducing report generation time from hours to minutes, showcasing backend-focused full-stack development.
         </li>
 
-        <li><b>Architected webhook-based services</b> (<b>Java + NoSQL</b>) for mobile-first apps, enabling instant user
-          notifications and smoother integration with external systems.</li>
-
-        <li><b>Championed PR best practices</b> (coding standards, design patterns, documentation) and <b>mentored a new
-            project
-            team</b>, strengthening code maintainability and cross-team collaboration.</li>
+        <li><b>Introduced PR templates, <b>test-driven development (TDD)</b>, and <b>design-pattern guidelines</b> for a 12-member engineering squad,
+        raising code coverage to 80% and reducing post-release defects by 30%</li>
         <!-- <li>Created a pausable down service</li> -->
         <li class="job-skill">JAVA, Springboot, Kafka, Junit, AWS Lamda, AWS pipeline, NodeJS, PySpark, MongoDB,
           Javascript, AngularJS, AurliaJS </li>
@@ -700,28 +678,12 @@
         <span class="job-date">Aug 2019 – Oct 2020 | Pune, India</span>
       </div>
       <ul>
-        <li><b>Developed an internal job portal</b> (<b>Angular + Spring Framework</b>) enabling direct applications and
-          interview scheduling, <b>streamlining hiring workflows</b> and reducing HR coordination time.</li>
-        <li><b>Modernized the company’s internal homepage</b> (used daily by employees) by gathering requirements,
-          suggesting enhancements, and <b>successfully launching</b> the product in an agile model.</li>
-        <li>Delivered production-ready, high-quality code by following <b>Agile and XP practices</b>, ensuring faster
-          iterations and reliable deployments.</li>
+        <li>Developed an internal job portal (Angular/Spring) <b>serving 2,000+ employees</b>and shortening HR coordination cycles.</li>
+        <li><b>Revamped intranet homepage </bused by 10,000 staff, increasing daily engagement by 25%.</li>
+        <li>Consistently met <b>100% of sprint commitments under XP and continuous-integration practices</b>.</li>
         <!-- <li class="job-skill">JAVA, Springboot, Junit, MySQL, Javascript, AngularJS </li> -->
       </ul>
     </div>
-
-    <div class="achievements">
-      <h2>Key Achievements</h2>
-      <ul>
-        <li><b>Reduced booking latency by 30%</b> for a high-traffic airline platform supporting <b>30K+ concurrent
-            users</b>.</li>
-        <li><b>Improved credit decision accuracy by 15%</b> through external vendor data integration.</li>
-        <li><b>Accelerated hiring workflows</b> by launching an internal job portal used across HR teams.</li>
-        <li><b>Boosted developer productivity</b> by publishing reusable libraries and automating beta/stable release
-          pipelines.</li>
-      </ul>
-    </div>
-  </div>
 
   <div class="section">
     <h2>Education</h2>
@@ -747,10 +709,9 @@
           </b>
         </div>
         <div>
-          Automated bot using <b>Stable Diffusion XL</b> for image generation with <b>dynamic text</b>, filters, and
-          anti-patterns.<br>
-          Integrated <b>GitHub Actions</b> worker pipelines to schedule daily posts on a subreddit.<br>
-          Enables end-to-end <b>automated content generation and publishing</b>.
+         • Automated bot using <b>Stable Diffusion XL for image generation </b>with dynamic text, filters, and anti-patterns.
+         • Integrated GitHub Actions worker pipelines to schedule daily posts on a subreddit.
+         • Enables end-to-end automated content generation and publishing
         </div>
       </li>
       <li style="margin-bottom: 18px;">
@@ -762,10 +723,8 @@
           </b>
         </div>
         <div>
-          Full-stack app with <b>Spring Boot</b> backend and <b>React</b> frontend.<br>
-          <b>JWT authentication</b> (sign-up, login, forgot-password).<br>
-          Core social features: <b>posting images/text</b>, <b>comments</b>, <b>likes</b>, <b>follow system</b>.<br>
-          Deployed on <b>Heroku</b> with complete database-backed architecture.
+        • Developed a social-media clone using Spring Boot, React and <b>JWT-based </b>authentication.
+        • Implemented RESTful APIs, user feeds and secure image storage to showcase full-stack capabilities.
         </div>
       </li>
       <li style="margin-bottom: 18px;">
@@ -777,41 +736,19 @@
           </b>
         </div>
         <div>
-          Event-driven microservices platform hosted on <b>Kubernetes</b>.<br>
-          Implemented <b>service discovery</b>, <b>API gateways</b>, <b>authentication</b>.<br>
-          Used <b>Neo4J</b> for user connections, <b>PostgreSQL</b> for relational data, <b>Kafka</b> for event
-          streaming.<br>
-          Microservices in <b>Spring Boot</b>, each with its own database for <b>scalability</b> and <b>fault
-            isolation</b>.
+          • Built an <b>event-driven microservices</b> playground on Kubernetes integrating Neo4J, PostgreSQL and Kafka.
+          • Demonstrated best practices for <b>scalable graph-based data processing and container orchestration</b>.
         </div>
       </li>
-      <li style="margin-bottom: 18px;">
-        <div>
-          <b>
-            <a href="https://github.com/divyanshrana/resume-pdf-gen" target="_blank" rel="noopener noreferrer">
-              HTML-PDF Automation Pipeline
-            </a>
-          </b>
-        </div>
-        <div>
-          Automated pipeline using <b>GitHub Actions</b> to convert <b>HTML</b> into <b>PDFs</b> on every commit.<br>
-          Published updated versions to <b>GitHub Pages</b> for browser viewing and downloads.<br>
-          Ensures a <b>continuously up-to-date resume</b> with both HTML visualization and downloadable PDF in a public
-          repo.
-        </div>
-      </li>
-    </ul>
-  </div>
-
+      
 
   <div class="section">
     <h2>Achievements & Honors:</h2>
     <ul style="margin-left: 3.8rem;">
-      <li><b>Mentor at Newton School:</b> Guided aspiring developers in mastering data structures, algorithms, and
-        full-stack
-        development through structured mentorship and hands-on coding practice.</li>
+      <li><b>Top MVP Learner, Delta Air Lines (156 Udemy Business hours)</b>, Q1-Q2 2023.</li>
+      <li><b>Promotion: Software Developer I → II</b>, Delta Air Lines (Mar 2024)</li>
+      <li><b>Promotion: Software Engineer I → II</b>, Scienaptic AI (Oct 2022)</li>
       <li><b>AI Foundations Nanodegree</b> – Udacity | Issued May 2018</li>
-      <li><b>Android Basics Nanodegree</b> – Udacity | Issued May 2017</li>
     </ul>
   </div>
 
