--- a/resume.html
+++ b/resume.html
@@ -586,9 +586,9 @@
     <h2 style=" margin-top: 0;">Skills</h2>
     <div class="skills-grid" style="margin-left: 3.8rem;">
       <div><b>Backend/Frameworks:</b> • Java • Spring Boot • Quarkus • Java EEE • Spring MVC • Hibernate • Application Servers • Servlet Containers  • JPA</div>
-      <div><b>Frontend:</b>Angular • React</div>
       <div><b>Cloud/DevOps:</b>AWS (EC2, S3, Lambda, CloudWatch) • Kubernetes • Docker • GitLab CI/CD • Terraform • Helm • Grafana</div>
       <div><b>Data Messaging:</b> Kafka 
+      <div><b>Frontend:</b>Angular • React</div>
       <div><b>Databases:</b> PostgreSQL • MySQL • MongoDB • DynamoDB • Neo4j • Redis
       </div>
 
@@ -633,7 +633,7 @@ Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
           the org, <b>reducing developer time</b> and <b>improving code consistency</b>.</li> -->
         <li>Led caching and integration strategy that reduced <b>vacation-search latency by 93% (30 s ➜ 2 s) for 5,000-10,000 daily searches</b>.</li>
         <li>Coached four junior engineers on design reviews and <b>CI/CD</b> hygiene, boosting <b>deployment success rate to 99%+</b>.</li>
-        <li><b>Instrumented services with <b>CloudWatch</b>, Grafana and automated alarms, <b>reducing mean-time-to-detect by 40%</b>.</li>
+        <li>Instrumented services with <b>CloudWatch</b>, Grafana and automated alarms, <b>reducing mean-time-to-detect by 40%</b>.</li>
         <li class="job-skill">JAVA, AWS, EC2, S3, Route53, EventBridge, Cloudwatch, DynamoDB, IAMs, Redis,
           Quarkus, Springboot, Angular,
           NX, MongoDB, PostgreSQL, Docker</li>
@@ -651,19 +651,19 @@ Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
           billion USD in loan applications per month, increasing 1-hour decision share from <b>35% to 62%</b>.
         </li>
 
-        <li><b>Integrated bureau and <b>alternative-data APIs</b>, improving credit-risk prediction accuracy by 15% through smarter data aggregation
+        <li>Integrated bureau and <b>alternative-data APIs</b>, improving credit-risk prediction accuracy by 15% through smarter data aggregation
           and <b>real-time ingestion pipelines</b>.
         </li>
 
-        <li>Built a pricing-guidance API for a global hardware client, <b>enabling ~5% sales uplift via dynamic competitor benchmarking and
-           personalized price recommendations</b>.
+        <li>Built a pricing-guidance API for a global hardware client, <b>enabling ~5% sales</b> uplift via dynamic competitor benchmarking and
+           personalized price recommendations.
         </li>
 
         <li>Developed a real-time forecasting dashboard using <b>Java (Spring Boot), MySQL, Kafka Streaming, Spark Streaming,</b> and Angular,
           reducing report generation time from hours to minutes, showcasing backend-focused full-stack development.
         </li>
 
-        <li><b>Introduced PR templates, <b>test-driven development (TDD)</b>, and <b>design-pattern guidelines</b> for a 12-member engineering squad,
+        <li>Introduced PR templates, <b>test-driven development (TDD)</b>, and <b>design-pattern guidelines</b> for a 12-member engineering squad,
         raising code coverage to 80% and reducing post-release defects by 30%</li>
         <!-- <li>Created a pausable down service</li> -->
         <li class="job-skill">JAVA, Springboot, Kafka, Junit, AWS Lamda, AWS pipeline, NodeJS, PySpark, MongoDB,
@@ -679,7 +679,7 @@ Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
       </div>
       <ul>
         <li>Developed an internal job portal (Angular/Spring) <b>serving 2,000+ employees</b>and shortening HR coordination cycles.</li>
-        <li><b>Revamped intranet homepage </bused by 10,000 staff, increasing daily engagement by 25%.</li>
+        <li><b>Revamped intranet homepage used by 10,000 staff, increasing daily engagement by 25%.</li>
         <li>Consistently met <b>100% of sprint commitments under XP and continuous-integration practices</b>.</li>
         <!-- <li class="job-skill">JAVA, Springboot, Junit, MySQL, Javascript, AngularJS </li> -->
       </ul>
@@ -737,7 +737,7 @@ Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
         </div>
         <div>
           • Built an <b>event-driven microservices</b> playground on Kubernetes integrating Neo4J, PostgreSQL and Kafka.
-          • Demonstrated best practices for <b>scalable graph-based data processing and container orchestration</b>.
+          • Demonstrated best practices for <b>scalable</b>graph-based data processing and container orchestration>.
         </div>
       </li>
       
