--- a/resume.html
+++ b/resume.html
@@ -679,7 +679,7 @@ Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
       </div>
       <ul>
         <li>Developed an internal job portal (Angular/Spring) <b>serving 2,000+ employees</b>and shortening HR coordination cycles.</li>
-        <li><b>Revamped intranet homepage used by 10,000 staff, increasing daily engagement by 25%.</li>
+        <li>Revamped intranet homepage used by 10,000 staff, increasing daily <b>engagement by 25%</b>.</li>
         <li>Consistently met <b>100% of sprint commitments under XP and continuous-integration practices</b>.</li>
         <!-- <li class="job-skill">JAVA, Springboot, Junit, MySQL, Javascript, AngularJS </li> -->
       </ul>
@@ -690,7 +690,7 @@ Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
     <p style="margin-left: 3.8rem;">
       B.E. in Computer Science Engineering | 2015 – 2019 | India<br>
       CGPA: 8.2 / 10<br>
-      Relevant Coursework: <b>OOPS (Object Oriented Programming)</b>, <b>Data Structures & Algorithms</b>, Operating
+      Relevant Coursework: <b>OOPS</b> (Object Oriented Programming), <b>Data Structures & Algorithms</b>, Operating
       Systems,
       Database Management Systems, Computer Networks, Software Engineering, Cloud Computing,
       <b>Software Design</b>
