--- a/resume.html
+++ b/resume.html
@@ -585,10 +585,10 @@
   <div class="section" style="text-align: left;">
     <h2 style=" margin-top: 0;">Skills</h2>
     <div class="skills-grid" style="margin-left: 3.8rem;">
-      <div><b>Backend/Frameworks:</b> • Java • Spring Boot • Quarkus • Java EEE • Spring MVC • Hibernate • Application Servers • Servlet Containers  • JPA</div>
-      <div><b>Cloud/DevOps:</b>AWS (EC2, S3, Lambda, CloudWatch) • Kubernetes • Docker • GitLab CI/CD • Terraform • Helm • Grafana</div>
+      <div><b>Backend/Frameworks:</b>  Java • Spring Boot • Quarkus • Java EEE • Spring MVC • Hibernate • Application Servers • Servlet Containers  • JPA</div>
+      <div><b>Cloud/DevOps:</b> AWS (EC2, S3, Lambda, CloudWatch) • Kubernetes • Docker • GitLab CI/CD • Terraform • Helm • Grafana</div>
       <div><b>Data Messaging:</b> Kafka 
-      <div><b>Frontend:</b>Angular • React</div>
+      <div><b>Frontend:</b> Angular • React</div>
       <div><b>Databases:</b> PostgreSQL • MySQL • MongoDB • DynamoDB • Neo4j • Redis
       </div>
 
@@ -596,8 +596,7 @@
   </div>
 
   <div class="section">
-    <h2>Experience | 5+ years | Backend Engineering • Distributed Systems • Cloud | Deep expertise in Java 17, Spring
-Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
+    <h2>Experience | 5+ years | Backend Engineering • Distributed Systems • Cloud |
     <!-- <p>
       Backend Engineer with 6+ years of experience in scalable distributed systems, cloud-native architectures, and
       high-performance microservices. Skilled in <b>Java, Spring Boot, Quarkus, Kafka, AWS, Kubernetes</b>, with
@@ -678,7 +677,7 @@ Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
         <span class="job-date">Aug 2019 – Oct 2020 | Pune, India</span>
       </div>
       <ul>
-        <li>Developed an internal job portal (Angular/Spring) <b>serving 2,000+ employees</b>and shortening HR coordination cycles.</li>
+        <li>Developed an internal job portal (Angular/Spring) <b>serving 2,000+ employees</b> and shortening HR coordination cycles.</li>
         <li>Revamped intranet homepage used by 10,000 staff, increasing daily <b>engagement by 25%</b>.</li>
         <li>Consistently met <b>100% of sprint commitments under XP and continuous-integration practices</b>.</li>
         <!-- <li class="job-skill">JAVA, Springboot, Junit, MySQL, Javascript, AngularJS </li> -->
@@ -690,10 +689,9 @@ Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
     <p style="margin-left: 3.8rem;">
       B.E. in Computer Science Engineering | 2015 – 2019 | India<br>
       CGPA: 8.2 / 10<br>
-      Relevant Coursework: <b>OOPS</b> (Object Oriented Programming), <b>Data Structures & Algorithms</b>, Operating
-      Systems,
-      Database Management Systems, Computer Networks, Software Engineering, Cloud Computing,
-      <b>Software Design</b>
+      Relevant Core Skills: <b>OOPS</b> (Object Oriented Programming), <b>Data Structures & Algorithms</b>, Microservices Architecture,
+      Cloud-Native Development, Event-Driven Design, <b>DevOps CI/CD, Agile-Scrum Methodology</b>, Technical Leadership Mentoring, Test-Driven Development (TDD)
+      <b>Software Design</b>,Performance Optimisation
     </p>
   </div>
 
@@ -737,12 +735,11 @@ Boot, Quarkus, AWS, Kubernetes and Kafka.</h2>
         </div>
         <div>
           • Built an <b>event-driven microservices</b> playground on Kubernetes integrating Neo4J, PostgreSQL and Kafka.
-          • Demonstrated best practices for <b>scalable</b>graph-based data processing and container orchestration>.
+          • Demonstrated best practices for <b>scalable</b> graph-based data processing and container orchestration.
         </div>
       </li>
       
-
-  <div class="section">
+ <div class="section">
     <h2>Achievements & Honors:</h2>
     <ul style="margin-left: 3.8rem;">
       <li><b>Top MVP Learner, Delta Air Lines (156 Udemy Business hours)</b>, Q1-Q2 2023.</li>
