--- a/resume.html
+++ b/resume.html
@@ -167,7 +167,7 @@
 
   <!-- Experience -->
   <div class="section">
-    <h2>Experience | 5+ years | Backend Engineering • Distributed Systems • Cloud |</h2>
+    <h1>Experience | 5+ years | Backend Engineering • Distributed Systems • Cloud </h1>
 
     <div class="job">
       <div>
