--- a/resume.html
+++ b/resume.html
@@ -155,7 +155,7 @@
 
   <!-- Skills -->
   <div class="section">
-    <h2 style=" margin-top: 0;">Skills</h2>
+    <h2 style=" margin-top: 0;">Technical Skills</h2>
     <div class="skills-grid" style="margin-left: 3.8rem;">
       <div><b>Backend/Frameworks:</b>  Java • Spring Boot • Quarkus • Java EEE • Spring MVC • Hibernate • Application Servers • Servlet Containers  • JPA</div>
       <div><b>Cloud/DevOps:</b> AWS (EC2, S3, Lambda, CloudWatch) • Kubernetes • Docker • GitLab CI/CD • Terraform • Helm • Grafana</div>
@@ -183,7 +183,7 @@
           by identifying
           static pod deployments and enabling <b>autoscaling</b>, improving resource utilization for 20K–30K users and
           achieving an estimated annual cost saving of <b>$30,000–$40,000</b>.</li>
-        <li>Implemented SAGA-based distributed transactions with <b>Kafka</b> for fault-tolerant booking flows.</li>
+        <li>Implemented SAGA-based distributed transactions with <b>Kafka Stream</b> for fault-tolerant booking flows.</li>
         <li><b>Developed a real-time user activity detection service</b> from scratch, monitoring cross-tab
           interactions, syncing session states, and triggering configurable alerts (e.g., logout warnings), <b>enhancing
             engagement and security</b>.</li>
@@ -192,7 +192,7 @@
         <li>Modernised 11 legacy mainframe applications to Nx micro-frontends and <b>Quarkus containers</b>, cutting deployment cycles from
         1-2 weeks to under 4 hours <b>(80-90% faster)</b> across an 8-member team.
         </li>
-        <li>Led caching and integration strategy that reduced <b>vacation-search latency by 93% (30 s ➜ 2 s) for 5,000-10,000 daily searches</b>.</li>
+        <li>Led caching and integration strategy using <b>Redis</b> and <b>PostgresSQL</b> that reduced <b>vacation-search latency by 93% (30 s ➜ 2 s) for 5,000-10,000 daily searches</b>.</li>
         <li>Coached four junior engineers on design reviews and <b>CI/CD</b> hygiene, boosting <b>deployment success rate to 99%+</b>.</li>
         <li>Instrumented services with <b>CloudWatch</b>, Grafana and automated alarms, <b>reducing mean-time-to-detect by 40%</b>.</li>
         <li class="job-skill">JAVA, AWS, EC2, S3, Route53, EventBridge, Cloudwatch, DynamoDB, IAMs, Redis,
@@ -211,7 +211,7 @@
         <li>Delivered an <b>automated credit-decisioning platform </b> used by 150+ banks/NBFCs, processing 3 million decisions and ~$2.84
           billion USD in loan applications per month, increasing 1-hour decision share from <b>35% to 62%</b>.
         </li>
-        <li>Integrated bureau and <b>alternative-data APIs</b>, improving credit-risk prediction accuracy by 15% through smarter data aggregation
+        <li>Integrated bureau and <b>alternative-data asynchronous APIs</b>, improving credit-risk prediction accuracy by 15% through smarter data aggregation
           and <b>real-time ingestion pipelines</b>.
         </li>
         <li>Built a pricing-guidance API for a global hardware client, <b>enabling ~5% sales</b> uplift via dynamic competitor benchmarking and
@@ -280,8 +280,10 @@
           </b>
         </div>
         <div>
-        • Developed a social-media clone using Spring Boot, React and <b>JWT-based </b>authentication.
-        • Implemented RESTful APIs, user feeds and secure image storage to showcase full-stack capabilities.
+        • Developed a Dynamic WEB Application using <b>JAVA ,Spring MVC, Spring Boot ,Rest API</b> and <b>JWT-based </b>authentication.
+        • Implented data Integrity measures by utilizing <b>ORM</b> Framework like <b>Hibernate</b> and <b>Spring Security</b>.
+        • Validated code robustness by employing <b>JUnit</b> and <b>Mockito</b> for thorough testing coverage
+          
         </div>
       </li>
       <li style="margin-bottom: 18px;">
@@ -293,8 +295,9 @@
           </b>
         </div>
         <div>
-          • Built an <b>event-driven microservices</b> playground on Kubernetes integrating Neo4J, PostgreSQL and Kafka.
-          • Demonstrated best practices for <b>scalable</b> graph-based data processing and container orchestration.
+          • Built an event-driven microservices playground on <b>Kubernetes integrating Neo4J, PostgreSQL and Kafka</b>.
+          • Implemented <b>MVC</b> architecture for structured code organisation ,separating data handling(<b>Model</b>),user interface(<b>View</b>),
+            and business logic (<b>Controller</b>),optimising maintainability and scalability.
         </div>
       </li>
     </ul>
