--- a/resume.html
+++ b/resume.html
@@ -176,7 +176,7 @@
         <span class="job-date">Dec 2022 – Present | Bangalore, India</span>
       </div>
       <ul>
-        <li><b>Architected and developed a cloud-native vacation booking platform</b> in <b>Java, Quarkus, Redis</b>,
+        <li>Architected and developed a cloud-native vacation booking platform in <b>Java, Quarkus, Redis</b>,
           <b>reducing booking latency by 30%</b> and supporting <b>30K+ concurrent users</b>.
         </li>
         <li><b>Led a cost-optimization initiative</b> in the <b>ROSA (Red Hat OpenShift Service on AWS)</b> environment
@@ -194,7 +194,7 @@
         </li>
         <li>Led caching and integration strategy using <b>Redis</b> and <b>PostgresSQL</b> that reduced <b>vacation-search latency by 93% (30 s ➜ 2 s) for 5,000-10,000 daily searches</b>.</li>
         <li>Coached four junior engineers on design reviews and <b>CI/CD</b> hygiene, boosting <b>deployment success rate to 99%+</b>.</li>
-        <li>Instrumented services with <b>CloudWatch</b>, Grafana and automated alarms, <b>reducing mean-time-to-detect by 40%</b>.</li>
+        <li>Instrumented services with <b>CloudWatch</b>, Grafana and automated alarms, reducing mean-time-to-detect by 40%.</li>
         <li class="job-skill">JAVA, AWS, EC2, S3, Route53, EventBridge, Cloudwatch, DynamoDB, IAMs, Redis,
           Quarkus, Springboot, Angular,
           NX, MongoDB, PostgreSQL, Docker</li>
