--- a/resume.html
+++ b/resume.html
@@ -187,7 +187,7 @@
         <li><b>Developed a real-time user activity detection service</b> from scratch, monitoring cross-tab
           interactions, syncing session states, and triggering configurable alerts (e.g., logout warnings), <b>enhancing
             engagement and security</b>.</li>
-        <li>Owned the microservices roadmap for the <b>Spring</b> based vacation-booking platform handling $4.8–9.6 million USD in weekly
+        <li>Owned the <b>microservices</b> roadmap for the <b>Spring</b> based vacation-booking platform handling $4.8–9.6 million USD in weekly
             bookings while maintaining <b>99.9% availability on AWS EKS</b>.</li>
         <li>Modernised 11 legacy mainframe applications to Nx micro-frontends and <b>Quarkus containers</b>, cutting deployment cycles from
         1-2 weeks to under 4 hours <b>(80-90% faster)</b> across an 8-member team.
