--- a/resume.html
+++ b/resume.html
@@ -234,7 +234,7 @@
         <span class="job-date">Aug 2019 – Oct 2020 | Pune, India</span>
       </div>
       <ul>
-        <li>Developed an internal job portal (Angular/Spring) <b>serving 2,000+ employees</b> and shortening HR coordination cycles.</li>
+        <li>Developed an internal job portal <b>(Angular/Spring)</b> serving 2,000+ employees and shortening HR coordination cycles.</li>
         <li>Revamped intranet homepage used by 10,000 staff, increasing daily <b>engagement by 25%</b>.</li>
         <li>Consistently met <b>100% of sprint commitments under XP and continuous-integration practices</b>.</li>
       </ul>
