--- a/resume.html
+++ b/resume.html
@@ -176,20 +176,20 @@
         <span class="job-date">Dec 2022 – Present | Bangalore, India</span>
       </div>
       <ul>
-        <li>Architected and developed a cloud-native vacation booking platform in <b>Java, Quarkus, Redis</b>,
-          <b>reducing booking latency by 30%</b> and supporting <b>30K+ concurrent users</b>.
+        <li>Architected and developed a cloud-native vacation booking platform in <b>Java, Quarkus</b>,
+           supporting <b>30K+ concurrent users</b>.
         </li>
-        <li><b>Led a cost-optimization initiative</b> in the <b>ROSA (Red Hat OpenShift Service on AWS)</b> environment
+        <li>Led a <b>cost-optimization</b> initiative in the <b>ROSA (Red Hat OpenShift Service on AWS)</b> environment
           by identifying
           static pod deployments and enabling <b>autoscaling</b>, improving resource utilization for 20K–30K users and
           achieving an estimated annual cost saving of <b>$30,000–$40,000</b>.</li>
         <li>Implemented SAGA-based distributed transactions with <b>Kafka Stream</b> for fault-tolerant booking flows.</li>
-        <li><b>Developed a real-time user activity detection service</b> from scratch, monitoring cross-tab
-          interactions, syncing session states, and triggering configurable alerts (e.g., logout warnings), <b>enhancing
-            engagement and security</b>.</li>
-        <li>Owned the <b>microservices</b> roadmap for the <b>Spring</b> based vacation-booking platform handling $4.8–9.6 million USD in weekly
+        <li>Developed a <b>real-time</b> user activity detection service from scratch, monitoring <b>cross-tab
+          interactions</b>, <b>syncing session states</b>, and triggering configurable alerts (e.g., logout warnings), enhancing
+            engagement and security.</li>
+        <li>Owned the <b>Microservices</b> roadmap for the <b>Spring</b> based vacation-booking platform handling $4.8–9.6 million USD in weekly
             bookings while maintaining 99.9% availability on <b>AWS EKS</b>.</li>
-        <li>Modernised 11 legacy mainframe applications to Nx micro-frontends and <b>Quarkus containers</b>, cutting deployment cycles from
+        <li>Modernised 11 legacy mainframe applications to <b>Nx</b> micro-frontends and <b>Quarkus containers</b>, cutting deployment cycles from
         1-2 weeks to under 4 hours <b>(80-90% faster)</b> across an 8-member team.
         </li>
         <li>Led caching and integration strategy using <b>Redis</b> and <b>PostgresSQL</b> that reduced <b>vacation-search latency by 93% (30 s ➜ 2 s) for 5,000-10,000 daily searches</b>.</li>
