--- a/resume.html
+++ b/resume.html
@@ -183,13 +183,13 @@
           by identifying
           static pod deployments and enabling <b>autoscaling</b>, improving resource utilization for 20K–30K users and
           achieving an estimated annual cost saving of <b>$30,000–$40,000</b>.</li>
-        <li>Implemented SAGA-based distributed transactions with <b>Kafka Stream</b> for fault-tolerant booking flows.</li>
+        <li>Implemented <b>SAGA</b>-based distributed transactions with <b>Kafka Stream</b> for fault-tolerant booking flows.</li>
         <li>Developed a <b>real-time</b> user activity detection service from scratch, monitoring <b>cross-tab
           interactions</b>, <b>syncing session states</b>, and triggering configurable alerts (e.g., logout warnings), enhancing
             engagement and security.</li>
         <li>Owned the <b>Microservices</b> roadmap for the <b>Spring</b> based vacation-booking platform handling $4.8–9.6 million USD in weekly
             bookings while maintaining 99.9% availability on <b>AWS EKS</b>.</li>
-        <li>Modernised 11 legacy mainframe applications to <b>Nx</b> micro-frontends and <b>Quarkus containers</b>, cutting deployment cycles from
+        <li>Modernised 11 legacy mainframe applications to <b>Nx</b> micro-frontends and <b>Quarkus</b> containers, cutting deployment cycles from
         1-2 weeks to under 4 hours <b>(80-90% faster)</b> across an 8-member team.
         </li>
         <li>Led caching and integration strategy using <b>Redis</b> and <b>PostgresSQL</b> that reduced <b>vacation-search latency by 93% (30 s ➜ 2 s) for 5,000-10,000 daily searches</b>.</li>
@@ -211,7 +211,7 @@
         <li>Delivered an <b>automated credit-decisioning platform </b> used by 150+ banks/NBFCs, processing 3 million decisions and ~$2.84
           billion USD in loan applications per month, increasing 1-hour decision share from <b>35% to 62%</b>.
         </li>
-        <li>Integrated bureau and <b>alternative-data asynchronous APIs</b>, improving credit-risk prediction accuracy by 15% through smarter data aggregation
+        <li>Integrated bureau and alternative-data <b>asynchronous APIs</b>, improving credit-risk prediction accuracy by 15% through smarter data aggregation
           and <b>real-time ingestion pipelines</b>.
         </li>
         <li>Built a pricing-guidance API for a global hardware client, enabling ~5% sales uplift via dynamic competitor benchmarking and
