--- a/resume.html
+++ b/resume.html
@@ -157,10 +157,10 @@
   <div class="section">
     <h2 style=" margin-top: 0;">Technical Skills</h2>
     <div class="skills-grid" style="margin-left: 3.8rem;">
-      <div><b>Backend/Frameworks:</b>  Java • Spring Boot • Quarkus • Java EEE • Spring MVC • Hibernate • Application Servers • Servlet Containers  • JPA</div>
+      <div><b>Backend/Frameworks:</b>  Java • Spring Boot • Quarkus • Spring MVC • Hibernate • Application Servers • Servlet Containers  • JPA</div>
       <div><b>Cloud/DevOps:</b> AWS (EC2, S3, Lambda, CloudWatch) • Kubernetes • Docker • GitLab CI/CD • Terraform • Helm • Grafana</div>
-      <div><b>Data Messaging:</b> Kafka </div>
-      <div><b>Frontend:</b> Angular • React</div>
+      <div><b>Data Messaging,Testing Stack:</b> Kafka • Unit Testing  • JUnit</div>
+      <div><b>Frontend:</b> Angular • Typescript</div>
       <div><b>Databases:</b> PostgreSQL • MySQL • MongoDB • DynamoDB • Neo4j • Redis</div>
     </div>
   </div>
@@ -182,7 +182,7 @@
         <li>Led a <b>cost-optimization</b> initiative in the <b>ROSA (Red Hat OpenShift Service on AWS)</b> environment
           by identifying
           static pod deployments and enabling <b>autoscaling</b>, improving resource utilization for 20K–30K users and
-          achieving an estimated annual cost saving of <b>$30,000–$40,000</b>.</li>
+          achieving an estimated annual cost <b>saving of $30,000–$40,000</b>.</li>
         <li>Implemented <b>SAGA</b>-based distributed transactions with <b>Kafka Stream</b> for fault-tolerant booking flows.</li>
         <li>Developed a <b>real-time</b> user activity detection service from scratch, monitoring <b>cross-tab
           interactions</b>, <b>syncing session states</b>, and triggering configurable alerts (e.g., logout warnings), enhancing
