--- a/resume.html
+++ b/resume.html
@@ -172,7 +172,7 @@
     <div class="job">
       <div>
         <span style="font-weight: bold;">Delta Airlines</span> –
-        <span class="job-title">Software Engineer II</span>
+        <span class="job-title"><b>Software Engineer II</b></span>
         <span class="job-date">Dec 2022 – Present | Bangalore, India</span>
       </div>
       <ul>
@@ -204,7 +204,7 @@
     <div class="job">
       <div>
         <span style="font-weight: bold;">Scienaptic AI</span> –
-        <span class="job-title">Software Engineer II</span>
+        <span class="job-title"><b>Software Engineer II</b></span>
         <span class="job-date">Oct 2020 – Dec 2022 | Bangalore, India</span>
       </div>
       <ul>
@@ -230,7 +230,7 @@
     <div class="job">
       <div>
         <span style="font-weight: bold;">Infosys</span> –
-        <span class="job-title">Systems Engineer</span>
+        <span class="job-title"><b>Systems Engineer</b></span>
         <span class="job-date">Aug 2019 – Oct 2020 | Pune, India</span>
       </div>
       <ul>
