--- a/resume.html
+++ b/resume.html
@@ -248,7 +248,7 @@
       B.E. in Computer Science Engineering | 2015 – 2019 | India<br>
       CGPA: 8.2 / 10<br>
       <b>Relevant Core Skills</b>: <b>OOPS</b> (Object Oriented Programming), <b>Data Structures & Algorithms</b>, Microservices Architecture,
-      Cloud-Native Development, Event-Driven Design, <b>DevOps CI/CD, Agile-Scrum Methodology</b>, Technical Leadership Mentoring, Test-Driven Development (TDD)
+      Cloud-Native Development, Event-Driven Design, <b>DevOps CI/CD, Agile-Scrum Methodology</b>, Technical Leadership Mentoring, Technical Documentation
       <b>Software Design</b>,Performance Optimisation
     </p>
   </div>
