--- a/resume.html
+++ b/resume.html
@@ -245,7 +245,7 @@
   <div class="section">
     <h2>Education</h2>
     <p style="margin-left: 3.8rem;">
-      B.E. in Computer Science Engineering | 2015 – 2019 | India<br>
+      <b>B.E. in Computer Science Engineering</b> | 2015 – 2019 | India<br>
       CGPA: 8.2 / 10<br>
       <b>Relevant Core Skills</b>: <b>OOPS</b> (Object Oriented Programming), <b>Data Structures & Algorithms</b>, Microservices Architecture,
       Cloud-Native Development, Event-Driven Design, <b>DevOps CI/CD, Agile-Scrum Methodology</b>, Technical Leadership Mentoring, Technical Documentation
